--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,11 @@
 # https://hub.docker.com/r/gitlab/gitlab-ce
 # https://docs.gitlab.com/omnibus/settings/nginx.html#using-a-non-bundled-web-server
 
-version: '2.1'
+version: '3'
 services:
   gitlab:
     image: gitlab/gitlab-ce:${GITLAB_CE_VERSION}
     restart: always
-    container_name: gitlab
     hostname: "${GITLAB_HOST}"
     environment:
       - TZ=${TZ}
@@ -25,12 +24,11 @@ services:
       - postgres
     networks:
       - default
-      - nginx_proxy
+      - dev
 
   pages:
     image: gitlab/gitlab-ce:${GITLAB_CE_VERSION}
     restart: always
-    container_name: gitlab_pages
     hostname: "${PAGES_HOST}"
     environment:
       - TZ=${TZ}
@@ -39,8 +37,6 @@ services:
       - HTTPS_METHOD=nohttps
       # - LETSENCRYPT_HOST=${PAGES_HOST}
       # - LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL}
-    expose:
-      - 8090/tcp
     entrypoint:
       - /opt/gitlab/embedded/bin/gitlab-pages
     command:
@@ -54,12 +50,11 @@ services:
       - './volumes/data/gitlab-pages:/var/opt/gitlab/gitlab-pages:rw'
       - './volumes/data/gitlab-rails/shared/pages:/var/opt/gitlab/gitlab-rails/shared/pages:ro'
     networks:
-      - nginx_proxy
+      - dev
 
   runner:
     image: gitlab/gitlab-runner:${GITLAB_RUNNER_VERSION}
     restart: always
-    container_name: gitlab_runner
     environment:
       - CI_SERVER_URL=https://${GITLAB_HOST}/
     volumes:
@@ -69,7 +64,6 @@ services:
   postgres:
     image: postgres:${POSTGRES_VERSION}
     restart: always
-    container_name: gitlab_postgresql
     # https://github.com/docker-library/docs/tree/master/postgres#environment-variables
     environment:
       - POSTGRES_USER=gitlab
@@ -81,7 +75,6 @@ services:
   redis:
     image: redis:${REDIS_VERSION}
     restart: always
-    container_name: gitlab_redis
     command:
       - --loglevel warning
     volumes:
@@ -89,6 +82,4 @@ services:
     restart: always
 
 networks:
-  nginx_proxy:
-    external:
-      name: ${NGINX_PROXY_NETWORK_NAME}
+  dev:
